--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@astrojs/tailwind": "6.0.0",
     "astro": "5.4.1",
     "astro-icon": "^1.1.1",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
